--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "axios": "^1.3.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hot-toast": "^2.5.2",
+    "react-router-dom": "^7.6.2",
     "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
